hobbies and interests

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
 <h1>Здравейте, аз съм Ати,имам интерес към разработката на софтуер</h1>
 
+<h1> За разлика от интереса ми към IT индустрията, другите ми хобита са четене на книги и рисуване.</h1>
+
 
 </body>
 </html> 
