about the chanel:what fens to expect from me

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <p>https://www.giraffeacademy.com/</p>
   <p>https://www.youtube.com/@alexlorenlee ></p>
 
-
+<h1>В канала си ще споделя съвети  опита ми в ИТ индустрията</h1>
 
 </body>
 </html> 
