pricing for your services

--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
 
 <h1>В канала си ще споделя съвети  опита ми в ИТ индустрията</h1>
 
+<h1>Мога да съм полезна със съветите си</h1>
+
 </body>
 </html> 
