--- a/name.html
+++ b/name.html
@@ -5,6 +5,6 @@
 
 <h1>Atidzhe Karabash - 2001321079</h1>
 <h1>Elena Georgieva - 2001321020</h1>
-
+<h1>Roza Krumova - 2001321060 </h1>
 </body>
 </html> 
