--- a/name.html
+++ b/name.html
@@ -5,5 +5,6 @@
     <h1>Elena Georgieva - 2001321020</h1>
     <h1>Roza Krumova - 2001321060</h1>
     <h1>Valentin Iliev - 2001321032</h1>
+    <h1>Ivaylo Nichev - 2001321022</h1>
   </body>
 </html>
